syntax = "proto3";

package grpc.token;
option java_multiple_files = true;
option java_package = "com.siga.sus.grpc";

service TokenValidationService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string username = 2;
  string role = 3;
  string error_message = 4;
}